Brand-Extract page fixed
